# HW1_MLOPS

./: AGENTS.md  API.md  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  clearml.conf  docker-compose.yml  feature_plan.md  local.conf  pyproject.toml
app/: config.py  logger.py  main.py
app/api/: grpc_service.py  rest.py
app/ml/: models.py  service.py  trainer.py
app/services/: dvc_manager.py
frontend/: main.py
k8s/: app-deployment.yaml  frontend-deployment.yaml  minio.yaml
proto/: service.proto
scripts/: generate_proto.py
tests/: test_api.py
